fix: 修复collapse组件禁用属性无效。

--- a/src/components/themes/src/fly-collapse.scss
+++ b/src/components/themes/src/fly-collapse.scss
@@ -15,6 +15,10 @@
         padding:10px 0px;
         font-weight: bold;
         cursor:pointer;
+        @include state('disabled'){
+            color:$font-color-secondary;
+            cursor:not-allowed;
+        }
     }
     @include e('content'){
         padding:10px 0px;
